cabal-version: 2.4
name: unison-browser
version: 0

data-files: index.html

executable unison-browser
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    directory ^>= 1.3.3,
    http-types ^>= 0.12.3,
    text ^>= 1.2.3,
    wai ^>= 3.2.2,
    wai-cors ^>= 0.2.7,
    warp ^>= 3.3.0,
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  main-is: server-src/Main.hs
  other-modules: Paths_unison_browser
