cabal-version: 2.4
name: unison-browser
version: 0

data-files: index.html, main.js

executable unison-browser
  build-depends:
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    directory ^>= 1.3.3,
    hashable ^>= 1.3.0,
    http-types ^>= 0.12.3,
    psqueues ^>= 0.2.7,
    text ^>= 1.2.3,
    wai ^>= 3.2.2,
    wai-cors ^>= 0.2.7,
    warp ^>= 3.3.0,
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -threaded
  hs-source-dirs: server-src
  main-is: Main.hs
  other-modules: Cache, Paths_unison_browser
